pantalla de checkist redirect y update

--- a/Parcial1/app/src/main/res/layout/lista_articulos.xml
+++ b/Parcial1/app/src/main/res/layout/lista_articulos.xml
@@ -43,9 +43,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+
         <EditText
             android:id="@+id/txt_arti"
-            android:layout_width="348dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:fontFamily="sans-serif-black"
@@ -58,6 +59,13 @@
             android:textColorHighlight="#121111"
             app:layout_constraintTop_toBottomOf="@+id/txt2"
             tools:layout_editor_absoluteX="16dp" />
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1"
+            android:text="Estado" />
 
 
 
@@ -69,11 +77,12 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/preview_articulo"
             android:layout_width="40dp"
             android:layout_height="36dp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
+            android:onClick="onClickR"
             android:tint="#000000"
             app:srcCompat="@drawable/ic_baseline_keyboard_return_24" />
 
