--- a/Parcial1/app/src/main/res/layout/check_list.xml
+++ b/Parcial1/app/src/main/res/layout/check_list.xml
@@ -43,6 +43,7 @@
         android:layout_width="41dp"
         android:layout_height="36dp"
         android:layout_marginLeft="350dp"
+        android:onClick="onClickCheckMain"
         android:tint="#000000"
         app:srcCompat="@drawable/ic_baseline_keyboard_return_24"
         tools:layout_editor_absoluteX="354dp" />
