--- a/Parcial1/app/src/main/res/layout/activity_main.xml
+++ b/Parcial1/app/src/main/res/layout/activity_main.xml
@@ -78,9 +78,12 @@
 
     <ImageView
         android:id="@+id/button_check"
-        android:layout_width="61dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="32dp"
+        android:background="#00FFFFFF"
+        android:onClick="onClick"
+        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
