--- a/Parcial1/app/src/main/res/layout/list_compras.xml
+++ b/Parcial1/app/src/main/res/layout/list_compras.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/compras"
-            android:layout_width="47dp"
-            android:layout_height="49dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:tint="#090909"
             app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />
 
@@ -26,7 +26,8 @@
             android:fontFamily="sans-serif-black"
             android:text="Lista de Compras"
             android:textColor="#000000"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_marginTop="23dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -68,8 +69,9 @@
 
         <ListView
             android:id="@+id/listviewfecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:clickable="true"
             app:layout_constraintVertical_bias="1.0"></ListView>
 
 
