--- a/Parcial1/app/src/main/res/layout/list_compras2.xml
+++ b/Parcial1/app/src/main/res/layout/list_compras2.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/carrito"
-            android:layout_width="55dp"
-            android:layout_height="49dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:tint="#000000"
             app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />
 
@@ -26,7 +26,8 @@
             android:fontFamily="sans-serif-black"
             android:text="Lista de Compra"
             android:textColor="#090909"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_marginTop="23dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -40,7 +41,7 @@
             android:layout_height="50dp"
             android:ems="10"
             android:inputType="date"
-            android:text="Fecha" />
+            android:text="" />
 
     </LinearLayout>
 
@@ -52,23 +53,21 @@
     <ImageView
         android:id="@+id/previus_2"
         android:layout_width="40dp"
-        android:layout_height="32dp"
+        android:layout_height="40dp"
         android:tint="#050505"
         android:onClick="onClickRF"
         app:srcCompat="@drawable/ic_baseline_keyboard_return_24"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="133dp" />
+         />
 
     <ImageView
         android:id="@+id/save"
         android:layout_width="40dp"
-        android:layout_height="32dp"
-        android:layout_marginLeft="300dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="310dp"
         android:tint="#000000"
         android:onClick="onClickRF"
         app:srcCompat="@drawable/ic_baseline_save_24"
-        tools:layout_editor_absoluteX="302dp"
-        tools:layout_editor_absoluteY="133dp" />
+         />
         <ImageView
             android:id="@+id/update"
             android:layout_width="40dp"
@@ -81,18 +80,19 @@
             tools:layout_editor_absoluteY="133dp" />
 </LinearLayout>
 
-
-    <ListView
-        android:id="@+id/listadearti"
-        android:layout_width="wrap_content"
-        android:layout_height="446dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ListView
+            android:id="@+id/listadearti"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            app:layout_constraintVertical_bias="1.0"></ListView>
+    </LinearLayout>
+
 </LinearLayout>
